--- a/Lect-05-html-extra/index.html
+++ b/Lect-05-html-extra/index.html
@@ -8,8 +8,21 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, culpa!</p>
 
-    <a href="table.html">my table</a>
+    <a href="ble.html">my table</a>
     <br><br>
     <a href="https://msot.org/mirai-school-of-technology" target="_blank">MSOT</a>
+
+    <!-- <a href="./public/"></a> -->
+
+
+    <img src="./public/johnwick.jfif" alt="">
+    <img src="../../public/johnwick.jfif" alt="">
+
+    <!-- <a href="./public/assakooda.mpeg" download>asaakooda</a> -->
+     <a href="mailto:patel@gmail.com">mail me</a>
+     <a href="tel:9876543221">call me</a>
+
+    <!-- <a href="../../Test/thank.html">thank you</a> -->
+    <!-- <video src="../../public/subh.mp4" controls ></video> -->
 </body>
 </html>
