--- a/Lect-06-formandmedia/form.html
+++ b/Lect-06-formandmedia/form.html
@@ -12,7 +12,7 @@
         <fieldset>
             <legend>personal details</legend>
             <label for="name">Name:-</label>
-            <input type="text" id="" value="ramjane">
+            <input type="text" id="" value="" placeholder="Enter you r name">
 
             <br>
             <br>
