--- a/Lect-06-formandmedia/test.html
+++ b/Lect-06-formandmedia/test.html
@@ -8,12 +8,15 @@
 <body>
 <h1>media tags</h1>
 
-<img src="./public/johnwick.jfif" alt="john wick" title="good movie">
+<!-- <img src="./public/johnwick.jfif" alt="john wick" title="good movie">
 
 <br><br>
 <img src="https://images.unsplash.com/photo-1688600793944-4d45993e6583?q=80&w=921&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="panday" >
 
-<img src="johnwick.jfif" alt="">
+<img src="johnwick.jfif" alt=""> -->
 
+<h1>framming</h1>
+
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/9l5QY7BJmHQ?si=69FDfxJhyK64MPbl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 </body>
 </html>
