--- a/Lect-12-css/test.html
+++ b/Lect-12-css/test.html
@@ -7,7 +7,7 @@
     <style>
         body{
             /* background:linear-gradient(to right, rgb(255, 0, 0,0.3),rgb(255, 0, 0,0.3) ) */
-            background: linear-gradient(to bottom, rgba(109, 43, 43, 0.3) ,rgba(255, 0, 0, 0.7));
+            background: linear-gradient(to top rgba(109, 43, 43, 0.3) ,rgba(255, 0, 0, 0.7));
             
         }
         img{
