--- a/Lect-17-flexbox/test2.html
+++ b/Lect-17-flexbox/test2.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"> -->
+    <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
     <h1>mirai </h1>
 
+    <i class="fa-brands fa-facebook"></i>
     <i class="fa-solid fa-thumbs-up"></i>
+    <!-- <img src="apps_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""> -->
+    <!-- <img src="building-svgrepo-com.svg" alt=""> -->
+
     
 <!-- <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg> -->
 
