--- a/Lect-24-js-basics/test.html
+++ b/Lect-24-js-basics/test.html
@@ -15,7 +15,10 @@
         console.log("hello pnday!");
         
     </script> -->
+<script>
 
+    
+</script>
     <!-- <script src="app.js"></script> -->
 <script src="prime.js"></script>
 </body>
